--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Yifeng Wang",
   "main": "promise.mjs",
+  "types": "./index.d.ts",
   "scripts": {
     "test": "mocha"
   },
