--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "version": "1.2.0",
   "author": "Yifeng Wang",
   "repository": "https://github.com/doodlewind/nativebird.git",
-  "main": "promise.mjs",
+  "main": "./promise.mjs",
+  "exports": {
+    ".": {
+      "require": "./dist/promise.cjs",
+      "import": "./promise.mjs"
+    }
+  },
   "types": "./index.d.ts",
   "scripts": {
+    "build": "tsc promise.mjs --module commonjs --target esnext --allowJs --outDir dist && mv dist/promise.mjs dist/promise.cjs",
     "test": "mocha"
   },
   "devDependencies": {
-    "mocha": "^10.0.0"
+    "mocha": "^10.0.0",
+    "typescript": "^4.7.4"
   },
   "keywords": [
     "promise",
