--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   ],
   "types": "./index.d.ts",
   "scripts": {
-    "build": "tsc promise.mjs --module commonjs --target esnext --allowJs --outDir dist && mv dist/promise.mjs dist/promise.cjs",
+    "build": "node ./scripts/build.mjs",
     "prepublish": "npm run build",
     "test": "mocha"
   },
