--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "promise extension",
     "observable"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=11"
+  }
 }
